--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="thumbnail">
-          <img src="D:/Projects/MINE/Eroh Tech/assets/images/team1.jpeg" alt="Ofla" class="img-thumbnail" style="width: 100%; height: 400px;">
+          <img src="/assets/images/team1.jpeg" alt="Ofla" class="img-thumbnail" style="width: 100%; height: 400px;">
           <div class="container">
             <h2>Eric H Ofla</h2>
             <p class="title">CEO & Founder</p>
