--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="thumbnail">
-          <img src="/assets/images/team1.jpeg" alt="Ofla" class="img-thumbnail" style="width: 100%; height: 400px;">
+          <img src="assets/images/team1.jpeg" alt="Ofla" class="img-thumbnail" style="width: 100%; height: 400px;">
           <div class="container">
             <h2>Eric H Ofla</h2>
             <p class="title">CEO & Founder</p>
@@ -84,7 +84,7 @@
       </div>
       <div class="col-md-3">
         <div class="thumbnail">
-        <img src="D:/Projects/MINE/Eroh Tech/assets/images/team5.PNG" alt="Mike" class="img-thumbnail" style="width:100%; height: 400px;">
+        <img src="assets/images/team5.PNG" alt="Mike" class="img-thumbnail" style="width:100%; height: 400px;">
         <div class="container">
           <h2>Jabo JEAN MARIE </h2>
           <p class="title">Chief UI/UX Designer Officer</p>
