--- a/gallery.html
+++ b/gallery.html
@@ -101,7 +101,7 @@
       
         <div class="col-md-3">
           <div class="thumbnail">
-          <img src="D:/Projects/MINE/Eroh Tech/assets/images/team4.jpeg" alt="Eric" class="img-thumbnail" style="width: 100%; height: 400px;">
+          <img src="/assets/images/team4.jpeg" alt="Eric" class="img-thumbnail" style="width: 100%; height: 400px;">
           <div class="container">
             <h2>Eric SEBAKUNDA</h2>
             <p class="title">Chief Executive Officer</p>
@@ -118,7 +118,7 @@
 
       <div class="col-md-3">
         <div class="thumbnail">
-        <img src="D:/Projects/MINE/Eroh Tech/assets/images/team3.jpeg" alt="Mike" class="img-thumbnail" style="width: 100%; height: 400px;">
+        <img src="/assets/images/team3.jpeg" alt="Mike" class="img-thumbnail" style="width: 100%; height: 400px;">
         <div class="container">
           <h2>Fabrice IDUHIRE</h2>
           <p class="title">Chief Technical Officer</p>
