--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 rightside">
+          <!-- <div class="col-lg-3 rightside">
             <div class="row">
               <div class="col-lg">
                 <div class="header">
                  <img src="/assets/images/3.jpg" alt="" >
                 </div>
               </div>
-            </div></div>
+            </div></div> -->
          
           </div>
         
