--- a/project.html
+++ b/project.html
@@ -13,13 +13,13 @@
     <!-- Style -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>EROH Tech </title>
+    <title>EROH Tech</title>
   </head>
   <body>
-    <header role="banner ">
+    <header role="banner">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-lg">
-          <a class="navbar-brand" href="index.html"><p><span>E</span>ROH</p><small>Technology LTD</small> </a>
+          <a class="navbar-brand" href="index.html"><p><span>E</span>ROH</p><small>Technology LTD</small></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,11 +41,8 @@
             </ul>
 
             <ul class="navbar-nav ml-auto gap-3">
-              <!-- <li class="nav-item cta-btn">
-                <a class="nav-link" href="#">Donate</a>
-              </li> -->
               <li class="nav-item ctj-btn">
-                <a class="nav-link" href="contact.html">Contact </a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul> 
           </div>
@@ -53,14 +50,127 @@
       </nav>
     </header> 
 
-    <section  class="header-banner">
-        <div class="over-lay-element">
-          <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                  <h1 class="text-center text-white">Our Projects</h1>
-                </div>
+    <section class="header-banner">
+      <div class="over-lay-element">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <h1 class="text-center text-white">Our Projects</h1>
             </div>
           </div>
         </div>
+      </div>
     </section>
+
+    <section class="projects py-5">
+      <div class="container">
+        <div class="row">
+          <!-- Project 1 -->
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="card-img-top" src="assets/images/project1.jpg" alt="Project 1">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 1</h5>
+                <p class="card-text">Brief description of Project 1. This project focuses on solving XYZ problem using ABC technology.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="project1.html" class="btn btn-sm btn-outline-secondary">View</a>
+                  </div>
+                  <small class="text-muted">Date: Jan 2023</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 2 -->
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="card-img-top" src="assets/images/project2.jpg" alt="Project 2">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 2</h5>
+                <p class="card-text">Brief description of Project 2. This project aims to improve ABC process through innovative solutions.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="project2.html" class="btn btn-sm btn-outline-secondary">View</a>
+                  </div>
+                  <small class="text-muted">Date: Mar 2023</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project 3 -->
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="card-img-top" src="assets/images/project3.jpg" alt="Project 3">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 3</h5>
+                <p class="card-text">Brief description of Project 3. This project provides solutions for DEF challenges in the industry.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="project3.html" class="btn btn-sm btn-outline-secondary">View</a>
+                  </div>
+                  <small class="text-muted">Date: Jun 2023</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- More Projects -->
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="card-img-top" src="assets/images/project4.jpg" alt="Project 4">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 4</h5>
+                <p class="card-text">Brief description of Project 4. This project is focused on enhancing GHI systems using cutting-edge technologies.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="project4.html" class="btn btn-sm btn-outline-secondary">View</a>
+                  </div>
+                  <small class="text-muted">Date: Sep 2023</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="card-img-top" src="assets/images/WhatsApp Image 2023-02-19 at 15.57.29.jpeg" alt="Project 5">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 5</h5>
+                <p class="card-text">Brief description of Project 5. This project aims to revolutionize JKL by integrating novel approaches.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="project5.html" class="btn btn-sm btn-outline-secondary">View</a>
+                  </div>
+                  <small class="text-muted">Date: Dec 2023</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="card-img-top" src="assets/images/5.jpg" alt="Project 6">
+              <div class="card-body">
+                <h5 class="card-title">Project Title 6</h5>
+                <p class="card-text">Brief description of Project 6. This project explores new methodologies to address MNO issues effectively.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="project6.html" class="btn btn-sm btn-outline-secondary">View</a>
+                  </div>
+                  <small class="text-muted">Date: Feb 2024</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="bg-dark text-white py-4">
+      <div class="container text-center">
+        <p>&copy; 2024 EROH Technology LTD. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
