--- a/index.html
+++ b/index.html
@@ -10,36 +10,43 @@
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>EROH Tech </title>
+    <!-- Style -->
+    <link rel="stylesheet" href="assets/css/style.css">
+   
+
+
+    <title>EROH Tech</title>
   </head>
   <body>
     <header role="banner">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-lg">
-          <a class="navbar-brand" href="index.html"><p><span>E</span>ROH</p><small>Technology LTD</small> </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="index.html"><p><span>E</span>ROH</p><small>Technology LTD</small></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarsExample05">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ml-auto pl-lg-5 pl-0">
               <li class="nav-item">
                 <a class="nav-link active" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="index.html#about">About</a>
-              </li>
+              </li>  
               <li class="nav-item">
                 <a class="nav-link" href="gallery.html">Teams</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="project.html">Projects</a>
               </li>
-              <li class="nav-item">
+            </ul>
+
+            <ul class="navbar-nav ml-auto gap-3">
+              <li class="nav-item ctj-btn">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
-            </ul>
+            </ul> 
           </div>
         </div>
       </nav>
