--- a/gallery.html
+++ b/gallery.html
@@ -90,7 +90,8 @@
               <img src="assets/images/team5.png" alt="Jabo Jean Marie" class="card-img-top" style="width: 100%; height: 400px;">
               <div class="card-body text-center">
                 <h5 class="card-title">Jabo Jean Marie</h5>
-                <p class="card-text title">Chief UI/UX Designer Officer</p>
+                <p class="card-text title">Software Engineer Manager</p>
+          
                 <p class="card-text">A Computer Scientist with more than two years of experience in software development, designing algorithms and flowcharts to create new software programs and systems.</p>
                 <p>Email: <a href="mailto:jabojeanmarie@gmail.com">jabojeanmarie@gmail.com</a></p>
                 <a href="https://www.linkedin.com/in/jabo-jean-marie-9b432722b/" class="btn btn-primary"><iconify-icon class="icons" icon="carbon:logo-linkedin"></iconify-icon></a>
@@ -100,13 +101,13 @@
           <!-- Team Member 3 -->
           <div class="col-md-3">
             <div class="card mb-4 shadow-sm">
-              <img src="assets/images/team4.jpeg" alt="Eric Sebakunda" class="card-img-top" style="width: 100%; height: 400px;">
+              <img src="assets/images/IMG-20230119-WA0003.jpg" alt="furah Ben" class="card-img-top" style="width: 100%; height: 400px;">
               <div class="card-body text-center">
-                <h5 class="card-title">Eric Sebakunda</h5>
-                <p class="card-text title">Chief Executive Officer</p>
+                <h5 class="card-title">FURAH Ben</h5>
+                <p class="card-text title">Chief UI/UX Designer Officer</p>
                 <p class="card-text">A Computer Scientist with more than two years of experience in software development, designing algorithms and flowcharts to create new software programs and systems.</p>
-                <p>Email: <a href="mailto:ericmaxofficial@gmail.com">ericmaxofficial@gmail.com</a></p>
-                <a href="https://www.linkedin.com/in/max-kendrick-eric-379761262/" class="btn btn-primary"><iconify-icon class="icons" icon="carbon:logo-linkedin"></iconify-icon></a>
+                <p>Email: <a href="mailto:furahben44@gmail.com">furahben44@gmail.com</a></p>
+                <a href="" class="btn btn-primary"><iconify-icon class="icons" icon="carbon:logo-linkedin"></iconify-icon></a>
               </div>
             </div>
           </div>
